[package]
name = "seq2graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
indicatif = "0.17.3"
rayon = "1.7.0"
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
tabbycat = "0.1.3"
